<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Espresso Shot Capture</string>
</resources>
